# openapi/api.yaml
@@ -17,7 +17,6 @@ paths:
         - $ref: '#/components/parameters/limit'
         - $ref: '#/components/parameters/offset'
         - $ref: '#/components/parameters/offset-key'
-        - $ref: '#/components/parameters/api-key'
         - in: query
           name: search
           schema:
@@ -50,19 +49,48 @@ paths:
               - ASC
               - DESC
       operationId: GetWorldLogos
-      summary: Get world logo by id
-      description: Returns a single world logo record
+      summary: Get world logos
+      description: Returns a list of world logos
       security:
       - BearerAuth: []
       responses:
         200:
-          description: The specified resource was not found
+          description: Returns a list of world logos
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/worldLogo'
+        500:
+          $ref: '#/components/responses/errorResponse'
+    post:
+      tags:
+        - world-logo
+      parameters:
+        - $ref: '#/components/parameters/api-key'
+      operationId: CreateWorldLogo
+      summary: Create world logo
+      description: Create a new world logo record, if key already exists, it will be updated
+      security:
+        - BearerAuth: [ ]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/worldLogoInput"
+
+      responses:
+        200:
+          description: Returns created world logo
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/worldLogo'
         500:
           $ref: '#/components/responses/errorResponse'
+
   /world-logo/{id}:
     parameters:
       - $ref: '#/components/parameters/idParam'
@@ -76,7 +104,7 @@ paths:
       - BearerAuth: []
       responses:
         200:
-          description: The specified resource was not found
+          description: Returns a single world logo record
           content:
             application/json:
               schema:
@@ -115,7 +143,6 @@ components:
       required:
         - id
         - name
-        - description
         - logo_path
         - created_at
         - updated_at
@@ -123,8 +150,6 @@ components:
         id:
           type: string
         name:
-          type: string
-        description:
           type: string
         logo_path:
           type: string
@@ -134,7 +159,23 @@ components:
         updated_at:
           type: string
           format: date-time
-          
+    worldLogoInput:
+      type: object
+      required:
+        - src_key
+        - name
+      properties:
+        id:
+          type: string
+        src_key:
+          type: string
+        name:
+          type: string
+        logo_path:
+          type: string
+        logo_base64_str:
+          type: string
+
   parameters:
     api-key:
       in: header
